fix template routeé

--- a/src/templates/Route/index.template.hbs
+++ b/src/templates/Route/index.template.hbs
@@ -1,6 +1,6 @@
 import checkValidator from "@/middlewares/checkValidator";
 import route from "./{{name}}.route";
-import validator from "./{{name}}.validator";
+import validator from "./{{name}}.validators";
 {{#ifOr hasBody hasQuery}}
 import {
 {{#if hasBody}}
