--- a/src/templates/Route/index.template.hbs
+++ b/src/templates/Route/index.template.hbs
@@ -11,7 +11,7 @@ sanityzeQuery
 {{/if}}
 } from "@/middlewares/sanitize";
 {{/ifOr}}
-import wrapAsync from "@/helpers/wrapAsync";
+import wrapAsync from "@/middlewares/wrapAsync";
 import routeId from "@/middlewares/routeId";
 
 
